# docs/swagger.json
@@ -653,11 +653,27 @@
         "requests.CreateUserInput": {
             "type": "object",
             "required": [
+                "aws_access_key_id",
+                "aws_bucket",
+                "aws_region",
+                "aws_secret_access_key",
                 "email",
                 "name",
                 "password"
             ],
             "properties": {
+                "aws_access_key_id": {
+                    "type": "string"
+                },
+                "aws_bucket": {
+                    "type": "string"
+                },
+                "aws_region": {
+                    "type": "string"
+                },
+                "aws_secret_access_key": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -729,12 +745,19 @@
         },
         "requests.UpdateUserInput": {
             "type": "object",
-            "required": [
-                "email",
-                "name",
-                "password"
-            ],
             "properties": {
+                "aws_access_key_id": {
+                    "type": "string"
+                },
+                "aws_bucket": {
+                    "type": "string"
+                },
+                "aws_region": {
+                    "type": "string"
+                },
+                "aws_secret_access_key": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
